--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ p {
 <div class="content">
   <div class="maintenance-icon">🛠️</div>
   <h1>Server Under Maintenance</h1>
-  <p>We’re working on improvements.</p>
+  <p>I'm working on improvements.</p>
   <p>Estimated time to completion:</p>
   <div id="timer">Loading…</div>
 </div>
